<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Who\'s playing</string>
    <string name="serie_a">SerieA</string>
    <string name="premier_league">Premier</string>
    <string name="la_liga">LaLiga</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="ligue_1" tools:ignore="Typos">Ligue1</string>
    <string name="no_events_available">No events available</string>
    <string name="match_events">Match events</string>
    <string name="statistics">Statistics</string>
    <string name="standings">Standings</string>
    <string name="lineups">Lineups</string>
    <string name="rank">Pos</string>
    <string name="team">Teams</string>
    <string name="points">Pts</string>
    <string name="played">P</string>
    <string name="win">W</string>
    <string name="draw">D</string>
    <string name="lose">L</string>
    <string name="scored">F</string>
    <string name="against">A</string>
    <string name="goals_difference">+/-</string>
    <string name="form">Form</string>
    <string name="today">Today</string>
    <string name="shots_on_goal">Shots on goal</string>
    <string name="shots_off_goal">Shots off goal</string>
    <string name="total_shots">Total shots</string>
    <string name="blocked_shots">Blocked shots</string>
    <string name="shots_inside_box">Shots inside box</string>
    <string name="shots_outside_box">Shots outside box</string>
    <string name="fouls">Fouls</string>
    <string name="corner_kicks">Corner kicks</string>
    <string name="offsides">Offsides</string>
    <string name="ball_possession">Ball possession</string>
    <string name="yellow_cards">Yellow cards</string>
    <string name="red_cards">Red cards</string>
    <string name="goalkeeper_saves">Goalkeeper saves</string>
    <string name="total_passes">Total passes</string>
    <string name="passes_accurate">Passes accurate</string>
    <string name="passes_percentage">Passes %</string>
    <string name="expected_goals">Expected Goals</string>
    <string name="coach">Coach</string>
    <string name="formation">Formation</string>
    <string name="starting_eleven">Starting XI</string>
    <string name="substitutes">Substitutes</string>
    <string name="head_to_head">Head to Head</string>
    <string name="match_statistics">Match statistics</string>
    <string name="loading">Loading…</string>
</resources>